<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_input"
        android:hint="@string/enter_name"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:backgroundTint="#808080"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"
         />
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/email_address"
    android:hint="@string/enter_email"
    android:gravity="center_horizontal"
    android:padding="10dp"
    android:backgroundTint="#808080"
    app:layout_constraintTop_toBottomOf="@id/name_input"
    app:layout_constraintStart_toStartOf="parent"
    android:inputType="textEmailAddress"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_toggle"
        android:hint="@string/enter_password"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:backgroundTint="#808080"
        app:layout_constraintTop_toBottomOf="@id/email_address"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="numberPassword"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/re_enter_pass"
        android:hint="@string/reenter_password"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:backgroundTint="#808080"
        app:layout_constraintTop_toBottomOf="@id/password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="numberPassword"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/birthday_date"
        android:hint="@string/enter_birthday_date"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:backgroundTint="#808080"
        app:layout_constraintTop_toBottomOf="@id/re_enter_pass"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="date"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthday_date"
        android:checkedButton="@id/bottom">

<RadioButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintTop_toBottomOf="@id/birthday_date"
    app:layout_constraintStart_toStartOf="parent"
    android:text="Famale"
    android:id="@+id/bottom_one"
    />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/bottom_one"
        app:layout_constraintStart_toStartOf="parent"
        android:text="Male"
        />
    </RadioGroup>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/reg_button"
        android:text="Registration"
        app:layout_constraintTop_toBottomOf="@id/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </Button>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_button"
        android:id="@+id/massage_show"
        android:hint="@string/show_massage"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>